Fixes some test issues with setuptools.
Fixes a tox config issue, where we are unable to import `pofh` in our tests
because the source package is on the path (changedir fixes this).

Makes pytest the default `setup.py test` command, since it can be time consuming
to set up a functioning environment for tox with multiple python versions.

Fixes some failing tests in the test_sms_dispatcher test module.

--- a/tox.ini
+++ b/tox.ini
@@ -2,9 +2,7 @@
 envlist = py27,py35
 
 [testenv]
-deps=
-    -r{toxinidir}/requirements.txt
-    -r{toxinidir}/test-requirements.txt
-commands=
-    py.test \
-    --basetemp={envtmpdir}
+deps = -r{toxinidir}/test-requirements.txt
+changedir = tests
+commands =
+    py.test --basetemp={envtmpdir}
