Change the example log config

--- a/example.logging.ini
+++ b/example.logging.ini
@@ -40,13 +40,13 @@ args=(sys.stderr,)
 class=logging.handlers.TimedRotatingFileHandler
 level=NOTSET
 formatter=default
-args=('access.log', 'midnight', 1, 5, "utf-8", False, True)
+args=('logs/access.log', 'midnight', 1, 5, "utf-8", False, True)
 
 [handler_app_rotate]
 class=logging.handlers.TimedRotatingFileHandler
 level=NOTSET
 formatter=default
-args=('pofh.log', 'midnight', 1, 5, "utf-8", False, True)
+args=('logs/pofh.log', 'midnight', 1, 5, "utf-8", False, True)
 
 # FORMATTERS
 
@@ -54,5 +54,5 @@ args=('pofh.log', 'midnight', 1, 5, "utf-8", False, True)
 keys=default
 
 [formatter_default]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(asctime)s - [%(processName)s/%(threadName)s (%(process)d)] - %(name)s - [%(pathname)s:%(lineno)d] - %(levelname)s - %(message)s
 datefmt=%Y-%m-%d %H:%M:%S
